crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_delegation_property.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class LazyProperty {
  val message: String by lazy { "ready" }
}

diagnostics:
(none)
