crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_destructuring_baseline_declarations.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun destructuring(pair: Pair<String, Int>, entries: List<Pair<String, Int>>) {
  val (name, count) = pair
  var (mutableName, mutableCount) = pair
  for ((key, value) in entries) {
    consume(key, value, name, count, mutableName, mutableCount)
  }
}

diagnostics:
(none)
