crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_destructuring_name_based_preview.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun namedDestructuring(user: User) {
  val (name = displayName, age = years) = user
  val (val city = homeCity, var score = points) = user.profile
  consume(displayName, years, homeCity, points)
}

diagnostics:
(none)
