crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_destructuring_square_preview.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun squareDestructuring(record: Record, rows: List<Record>) {
  val [first, second, third] = record
  var [left, right] = record.bounds
  for ([name, value] in rows) {
    consume(first, second, third, left, right, name, value)
  }
}

diagnostics:
(none)
