crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_empty_if_then_branch.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun emptyThen() {
  if (true) else println(1)
}

diagnostics:
(none)
