crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_enum_entries_and_body.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum class Direction(val dx: Int, val dy: Int) {
  North(0, -1),
  South(0, 1);

  fun vertical(): Boolean = dx == 0
}

diagnostics:
(none)
