crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_expression_annotations.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun annotatedExpressions(flag: Boolean) {
  val environment =
    @Suppress(
      "OPT_IN_USAGE_ERROR"
    ) // createForProduction uses an internal opt-in
    createEnvironment()

  val choice =
    @Suppress("DEPRECATION")
    when (flag) {
      true -> "yes"
      false -> "no"
    }

  val length =
    @Suppress("DEPRECATION")
    when (flag) {
      true -> "yes"
      false -> "no"
    }
      .length
}

diagnostics:
(none)
