crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_expression_context_parameters_and_function_types.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
context(logger: Logger)
fun withContextParameter(value: String): Unit = logger.info(value)

typealias Handler = context(Session) (String) -> Unit

fun functionType(handler: Handler) {
  handler("ready")
}

diagnostics:
(none)
