crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_expression_precedence_ladder.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun precedence(a: Int, b: Int, c: Int, d: Int): Boolean {
  val arithmetic = a + b * c - d / 2 % 3
  val shifted = arithmetic shl 1 and 255
  return arithmetic > shifted && shifted != 0 || a == b
}

diagnostics:
(none)
